treid fixing incorrect scaling on iOS devices

--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -186,6 +186,7 @@ header {
   height: 100vh;
   background-image: url(images/hero-header.jpg);
   background-size: cover;
+  background-attachment: scroll;
   background-position: top right;
   justify-content: space-evenly;
   justify-items: center;
